--- a/desafios/d010/android.html
+++ b/desafios/d010/android.html
@@ -93,7 +93,7 @@
             </article>
     </main>
     <footer>
-        <p>site criado por <a href="https://github.com/gustavoguanabara" target="_blank">gustavo guanabara</a> pelo <a href="https://www.youtube.com/c/CursoemV%C3%ADdeo/featured" target="_blank">Curso em Video</a> </p>
+        <p>site criado por <a href="https://github.com/flaviooprogramador" target="_blank">Flavio oliveira</a></p>
     </footer>
 </body>
 </html>
