--- a/modulo_2/ex022/fundo007.html
+++ b/modulo_2/ex022/fundo007.html
@@ -21,8 +21,9 @@
             background-image: url(imagens/target001.png);
             background-size: 100% 100%;
 
-            left: 100px;
-            top: 200px;
+            left: 50%;
+            top: 50%;
+            transform: translate(-50%, -50%);
         }
     </style>
 </head>
