--- a/desafios/d12/index.html
+++ b/desafios/d12/index.html
@@ -5,15 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cordel Moderno</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-    Cordel Moderno
-    Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Duarte</a>
-   
+    <h1>Cordel Moderno</h1>
+   <p>por  <a href=" https://www.recantodasletras.com.br/poesias/3186743">  milton Duarte</a></p>
 </header>
 
-    <section>
+    <section class="normal">
         <p>
             Estou ficando cansado <br>
             Da tal tecnologia  <br>
@@ -27,7 +27,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Não é mais como era antes  <br>
             É tudo abreviado  <br>
@@ -41,7 +41,7 @@
 
 
 
-    <section>
+    <section class="normal">
         <p>
             Arroba agora não pesa  <br>
             É parte de um endereço  <br>
@@ -62,7 +62,7 @@
 
 
 
-    <section>
+    <section class="imagem">
         <p>
             Tenho saudade das cartas <br>
             Escritas com a própria mão <br>
@@ -76,7 +76,7 @@
 
   
 
-    <section>
+    <section class="normal">
         <p>
             Agora, escrevo e envio <br>
             Chegando na mesma hora <br>
