--- a/desafios/desafio_tabela.html
+++ b/desafios/desafio_tabela.html
@@ -10,7 +10,7 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         table{
-            width: 100px;
+            width: 300px;
         }
 
         td{
@@ -25,27 +25,31 @@
         <tr>
             <td>1</td>
             <td>2</td>
-            <td>3</td>
+            <td rowspan="2">3</td>
             <td>4</td>
         </tr>
         <tr>
+            
             <td>5</td>
             <td>6</td>
             <td>7</td>
-            <td>8</td>
         </tr>
         <tr>
+            <td colspan="3">8</td>
             <td>9</td>
-            <td>10</td>
-            <td>11</td>
+        </tr>
+        <tr>
+            <td rowspan="2">10</td>
+            <td colspan="2">11</td>
             <td>12</td>
         </tr>
         <tr>
+           >
             <td>13</td>
             <td>14</td>
             <td>15</td>
-            <td>16</td>
         </tr>
     </table>
 </body>
 </html>
+
