atualizando ex de tabelas

--- a/modulo_2/ex023/tabela004.html
+++ b/modulo_2/ex023/tabela004.html
@@ -30,13 +30,13 @@
         </caption>
         <thead>
         <tr>
-            <th>Grupos</th>
-            <th>Nomes</th>
-            <th colspan="3">Filmes</th>
+            <th scope="col">Grupos</th>
+            <th scope="col">Nomes</th>
+            <th colspan="3" scope="colgroup">Filmes</th>
         </tr>
         </thead>
         <tr>
-            <th rowspan="3">Mulheres</th>
+            <th rowspan="3" scope="rowgroup">Mulheres</th>
             <td>Ana maria santos</td>
             <td>Alien</td>
             <td>Rambo</td>
@@ -55,7 +55,7 @@
             <td>Big Hero</td>
         </tr>
         <tr>
-            <th rowspan="3">homens</th>
+            <th rowspan="3" scope="rowgroup">homens</th>
             <td>bruno mendoça</td>
             <td>intocaveis</td>
             <td>amnesia</td>
