--- a/modulo_3/iframe001.html
+++ b/modulo_3/iframe001.html
@@ -5,10 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos de iframe</title>
+    <style>
+        iframe{
+            height: 400px;
+            width: 400px;
+        }
+    </style>
 </head>
 <body>
     <h1>Testando o uso de iframe</h1>
-    <p>acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0"></iframe> para aprender iframe</p>
-    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> tambem e muito legal</p>
+    <p>acessando o site do <iframe src="https://www.cursoemvideo.com" frameborder="0" height="300"></iframe> para aprender iframe</p>
+    <p>O site do <iframe src="https://www.google.com.br" frameborder="0"></iframe> tambem e muito legal, pena que nao funciona dentro do iframe</p>
+
+    <p>o repositorio do guanabra <iframe src="https://gustavoguanabara.github.io" frameborder="0" height="500"></iframe>tambem e legal</p>
 </body>
 </html>
