--- a/modulo_3/iframe002.html
+++ b/modulo_3/iframe002.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iframe</title>
     <style>
-        body{
-            font-family: ;
-        }
+       
 
         iframe{
             width: 300px;
@@ -20,6 +18,10 @@
 <body>
     <h1>teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae nisi fugiat reiciendis, iure unde dolorem ratione explicabo similique assumenda earum quisquam dolor doloremque consequatur repellat ut. Soluta voluptatibus temporibus ullam!</p>
+
+
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ex iure, exercitationem soluta vero officia minima nam doloremque pariatur! Commodi eaque tempora, earum at totam nulla explicabo in. Quas, officiis assumenda?</p>
 
     <iframe src="paginas-extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
 </body>
