--- a/modulo_3/iframe003.html
+++ b/modulo_3/iframe003.html
@@ -30,7 +30,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sed velit id a eius iste quibusdam! Iusto dolore facilis, accusantium quibusdam, consectetur labore quod consequatur velit sint explicabo temporibus, ea quia.</p>
 
 
-    <iframe src="tela" name="frame" frameborder="0">
+    <iframe src="paginas-extras/pag001.html" name="frame">
         <p>infelizmente seu navegador nn e compativel com isso</p>
     </iframe>
 
