--- a/modulo_3/paginas-extras/pag004.html
+++ b/modulo_3/paginas-extras/pag004.html
@@ -7,6 +7,7 @@
     <title>formulario</title>
 </head>
 <body>
+    <h1>cadastre-se aqui</h1>
     <form action="cadastro.php" method="get">
         <p>
             nome:
