--- a/modulo_3/iframe004.html
+++ b/modulo_3/iframe004.html
@@ -9,8 +9,10 @@
 <body>
     <h1>meu site principal</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellat natus neque nesciunt debitis, aperiam officia cupiditate qui nobis doloribus hic. Sint delectus itaque sit iure architecto molestiae quia voluptate voluptas.</p>
-    <iframe src="paginas-extras/pag004.html" frameborder="0"></
-    <iframe>
+    <iframe src="paginas-extras/pag004.html" sandbox="allow-same-origin allow-forms allow-scripts" referrerpolicy="no-referrer"></
+    </iframe>
+
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste possimus beatae fugit delectus repudiandae expedita, veniam, voluptate dolores aspernatur est in architecto iusto iure minus nam reiciendis, facere odit eos.</p>
+    
 </body>
 </html>
