--- a/modulo_3/paginas-extras/pag005.html
+++ b/modulo_3/paginas-extras/pag005.html
@@ -5,16 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript</title>
+    <style>
+        body{
+            background-color: lawngreen;
+            color: beige;
+        }
+    </style>
 </head>
 <body>
-    <a href="#">clique em mim</a>
+    <a href="#" onclick="clicou">clique em mim</a>
     <div id="saida"></div>
 
 
     <script>
         function clicou(){
             s= window.document.getElementById("saida")
-            s.innerHTML += '<p>Voce clicou<p>'
+            s.innerHTML += '<p>Voce clicou</p>'
         }
     </script>
 </body>
