--- a/modulo_2/ex026/mq004/index.html
+++ b/modulo_2/ex026/mq004/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Media queries</title>
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-query.css">
+
 </head>
 <body>
-    
+    <main>
+        <h1>testando media queries</h1>
+        <img id="phone" src="imagens/icon-phone.png" alt="via smartphone">
+        <img  id="tablet" src="imagens/tableet.png" alt="via tablet">
+        <img id="print" src="imagens/icon-print.png" alt="via print">
+        <img id="pc" src="imagens/notbook.png" alt="via desktop">
+        <img id="tv" src="imagens/icon-tv.png" alt="versao TV">
+    </main>
 </body>
 </html>
