--- a/modulo_2/ex026/mq005/index.html
+++ b/modulo_2/ex026/mq005/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MEDIA QUERY</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    
 </head>
 <body>
     <header>
         <h1>meu site</h1>
-        <menu>
+        <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
+        <menu id="itens">
             <ul>
                 <li><a href="#">opção 1</a></li>
                 <li><a href="#">opção 2</a></li>
@@ -40,6 +44,12 @@
         </article>
 
     </main>
-
+    <script>
+        function clickMenu(){
+            if(itens.style.display == 'block') {
+                itens
+            }
+        }
+    </script>
 </body>
 </html>
