--- a/modulo_2/ex026/mq005/index.html
+++ b/modulo_2/ex026/mq005/index.html
@@ -47,7 +47,9 @@
     <script>
         function clickMenu(){
             if(itens.style.display == 'block') {
-                itens
+                itens.style.display = 'none'
+            } else{
+                itens.style.display = 'block'
             }
         }
     </script>
