--- a/modulo_2/ex026/mq005/index.html
+++ b/modulo_2/ex026/mq005/index.html
@@ -8,9 +8,10 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
     
 </head>
-<body>
+<body onresize="mudouTamnho">
     <header>
         <h1>meu site</h1>
         <span id="burguer" class="material-icons" onclick="clickMenu()">menu</span>
@@ -45,6 +46,19 @@
 
     </main>
     <script>
+        function mudouTamnho(){
+            if(window.innerwidth >= 768)
+            itens.style.display = 'block'
+            else{
+                itens.style.display = 'none'
+            }
+        }
+
+
+
+
+
+
         function clickMenu(){
             if(itens.style.display == 'block') {
                 itens.style.display = 'none'
